tests/integration/security/test_artifacts/security-ae75b8a2494145f8974590/TestMutualTlsOrigination/credential_with_CRL_having_server_certificate_revoked/_test_context/DestinationRule.4072957729.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: originate-tls-for-server-sds-mtls-credential-crl
spec:
  host: "external.external-4-11206.svc.cluster.local"
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 443
        tls:
          mode: MUTUAL
          credentialName: mtls-credential-crl
          sni: external.external-4-11206.svc.cluster.local
